# RIPE-backend

./: .dockerignore  .env  .env-docker  .gitignore  .gitlab-ci.yml  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.treshold_plugin  README.md  config.yaml  diesel.toml  docker-compose-integration.yml  docker-compose.yml  hot-reload.py  test.py
app/: Cargo.toml
app/migrations/: 20210618112608_initial.sql  20210628230406_log.sql  20240518173314_commands.sql  20240711210907_sensor_humidity.sql
app/src/: config.rs  error.rs  logging.rs  main.rs  models.rs  schema.rs
app/src/agent/: mock.rs  mod.rs  plugin.rs
app/src/models/: agent.rs  agent_command.rs  mod.rs  sensor.rs  sensor_data.rs  sensor_log.rs  test.rs
app/src/mqtt/: mod.rs  test.rs
app/src/observer/: mod.rs  mqtt.rs  sensor.rs  test.rs
app/src/plugin/: abortable.rs  agent.rs  factory.rs  logging.rs  mod.rs  native.rs  test.rs
app/src/plugin/wasm/: agent.rs  mod.rs  ticker.rs
app/src/rest/: agent.rs  agent_routes.rs  doc_routes.rs  metric_routes.rs  mod.rs  query.rs  sensor.rs  sensor_routes.rs  test.rs
app/src/sensor/: container.rs  handle.rs  mod.rs  mqtt.rs  observer.rs  test.rs
app/src/sensor/observer/: agent.rs  controller.rs  mod.rs  sensor.rs
core/: Cargo.toml  build.rs
core/src/: agent.rs  error.rs  lib.rs  messaging.rs  sensor.rs  stream.rs  stubs.rs
database/: docker-compose.yaml
docker/: docker-compose.yaml
migrations/2020-02-23-213643_create_posts/: down.sql  up.sql
migrations/2020-02-23-213643_create_sensors/: down.sql  up.sql
plugins/: Cargo.toml  hot-reload.py
plugins/percent_agent/: Cargo.toml
plugins/percent_agent/src/: lib.rs
plugins/test_agent/: Cargo.toml
plugins/test_agent/src/: lib.rs
plugins/time_agent/: Cargo.toml
plugins/time_agent/src/: lib.rs  time.rs
plugins/treshold_agent/: Cargo.toml
plugins/treshold_agent/src/: lib.rs
plugins/wasm_agent/: asconfig.json  package-lock.json  package.json
plugins/wasm_agent/app/: env.ts  index.ts  lib.ts  libwasm.ts
plugins/wasm_agent/tests/: index.js
plugins/wasm_agent_builder/: Cargo.toml  build.rs
plugins/wasm_agent_builder/src/: index.js  package-lock.json  package.json
plugins/wasm_agent_builder/src/app/: env.ts  libripe.ts
plugins/water_treshold_agent/: Cargo.toml
plugins/water_treshold_agent/src/: lib.rs
src/: error.rs  logging.rs  main.rs  models.rs  schema.rs
src/agent/: mod.rs  water.rs
src/observer/: mod.rs  mqtt.rs
src/rest/: mod.rs
src/sensor/: mod.rs
