[package]
name = "billie_jean_rust"
version = "0.1.0"
authors = ["Aron Metzig <aron.metzig@interface-ag.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-rt = "1.0.0"
actix-web = "2"
bytes = { version = "0.5", features = ["serde"] }
chrono = "0.4"
diesel = { version = "1.4.0", features = ["postgres"] }
dotenv = "0.9.0"
env_logger = "0.7.1"
futures = "0.3.1"
futures-util = "0.3.4"
once_cell = "1.3.1" 
rumq-client = "0.1.0-alpha.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
slog = "2.5.2" 
sloggers = "0.3.5" 
slog-bunyan = "2.2.0"
tokio = "0.2"
