[package]
name = "billie_jean_rust"
version = "0.1.0"
authors = ["Aron Metzig <aron.metzig@interface-ag.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1"
actix-web = "2"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres"] }
dotenv = "0.15"
env_logger = "0.7"
futures = "0.3"
futures-util = "0.3"
once_cell = "1.3" 
rumq-client = "0.1.0-alpha.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1" 
slog = "2.5" 
sloggers = "0.3"
tokio = "0.2"
tokio-test = "0.2"
