[package]
name = "ripe"
version = "0.1.0"
authors = ["Aron Metzig <aron.metzig@interface-ag.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# derived core dependencies
ripe_core = { path = "../core" }
chrono = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
utoipa = { version = "*", features = ["chrono"] }

# derived duplicate dependencies
futures-core = "*"
slog = "*" 
libloading = "*"
parking_lot = "*"
pin-project-lite = "*"
rand = "*"
chrono-tz = "*"
async-recursion = "1.0.5"
base64 = "0.21"
ctrlc = "3.4"
dotenv = "0.15"
env_logger = "0.10"
futures = "0.3"
notify = "6.0"
once_cell = "1.19"
rumqttc = { version = "0.23", features = [ "websocket" , "use-rustls" ] }
serde_json = "1" 
rustls = "*"
rustls-native-certs = "*"
sqlx = { version = "0.7", features = [ "postgres", "macros", "migrate", "chrono", "runtime-tokio-rustls" ] }
sloggers = "2"
thiserror = "1.0"
utoipa-swagger-ui = "3"
warp = "0.3.6"
wasmer = "3"
yaml-rust = "0.4"
