[package]
name = "ripe"
version = "0.1.0"
authors = ["Aron Metzig <aron.metzig@interface-ag.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# derived core dependencies
ripe_core = { path = "../core" }
chrono = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }
once_cell = "*"
utoipa = { version = "*", features = ["chrono"] }

# derived duplicate dependencies
libloading = "*"
parking_lot = "*"
rand = "*"
chrono-tz = "*"
base64 = "0.22"
ctrlc = "3.4"
dotenv = "0.15" 
notify = "6.1"
rumqttc = { version = "0.24", features = [ "websocket" , "use-rustls" ] }
serde_json = "1" 
sqlx = { version = "0.7", features = [ "postgres", "macros", "migrate", "chrono", "runtime-tokio-rustls" ] }
thiserror = "1.0"
uuid = { version = "1.8", features = [ "v4", "fast-rng" ] }
utoipa-swagger-ui = "6"
warp = "0.3.7"
wasmer = "3"
yaml-rust = "0.4"

tracing = "*"
tracing-opentelemetry = "0.22"
tracing-subscriber = "0.3"
opentelemetry = "0.21"
opentelemetry_sdk = "0.21"
opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
