[package]
name = "ripe_core"
version = "0.1.0"
authors = ["Aron Metzig <aron.metzig@interface-ag.de>"]
edition = "2018"

[lib]
crate_type = ["lib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.22", features = ["full"] }
slog = "2.7" 
utoipa = "2"

[dev-dependencies]
serde_json = "1" 

[build-dependencies]
rustc_version = "0.4"
