[package]
name = "ripe_core"
version = "0.1.0"
authors = ["Aron Metzig <aron.metzig@interface-ag.de>"]
edition = "2018"

[lib]
crate_type = ["lib"]

[dependencies] 
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
once_cell = "1.19"
tracing = "0.1"
utoipa = "4"

[dev-dependencies]
serde_json = "1" 

[build-dependencies]
rustc_version = "0.4"
