[package]
name = "percent_agent"
version = "0.1.0"
authors = ["Aron Metzig <aron.metzig@fau.de>"]
edition = "2018"
workspace = "../../"

[lib]
crate-type = ["cdylib"]

[dependencies]
ripe_core = { path = "../../core" }
chrono-tz = "*"
serde= "*"
slog = "*"
tokio = "*"
tracing = "*"
tracing-subscriber = "*"
serde_json = "1"
