[package]
name = "treshold_agent"
version = "0.1.0"
authors = ["Aron Metzig <aron.metzig@fau.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugins_core = { path = "../../core" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1" 
env_logger = "0.7"
slog = "2.5"
sloggers = "0.3"
tokio = "0.2"
