[package]
name = "treshold_agent"
version = "0.1.0"
authors = ["Aron Metzig <aron.metzig@fau.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
iftem_core = { path = "../../core" }
chrono = { version = "0.4", features = ["serde"] }
crossbeam = "0.7.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1" 
env_logger = "0.8"
slog = "2.7"
sloggers = "1"
tokio = "0.2"
