[package]
name = "water_treshold_agent"
version = "0.1.0"
authors = ["Aron Metzig <aron.metzig@fau.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugins_core = { path = "../../core" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1" 
